--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
 <!DOCTYPE HTML>
-<!--
-	Spectral by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
-		<title>Spectral by HTML5 UP</title>
+		<title>Steve Yongwo</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -43,18 +39,15 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<h2>Spectral</h2>
-							<p>Another fine responsive<br />
-							site template freebie<br />
-							crafted by <a href="http://html5up.net">HTML5 UP</a>.</p>
-							<ul class="actions">
-								<li><a href="#" class="button special">Activate</a></li>
-							</ul>
+							<h2>Steve Yongwo</h2>
+							<p>Développeur Web Symfony<br />				
+                            </p>
+							
 						</div>
-						<a href="#one" class="more scrolly">Learn More</a>
+						<a href="#one" class="more scrolly">Scroll</a>
 					</section>
 
-				<!-- One -->
+				<!-- One
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
@@ -70,6 +63,7 @@
 							</ul>
 						</div>
 					</section>
+                 -->
 
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
