--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
         </div>
 				<div class="col-lg-3">
-					<p><a href="Resume_Steve_Yongwo.pdf"><i class="icon-file"></i></a> <sm>Télécherger CV</sm></p>
+					<p><a href="Resume_Steve_Yongwo.pdf"><i class="icon-file"></i></a> <sm>Télécharger CV</sm></p>
 				</div>
 
 			</div><!--/.row -->
