--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="new_keywords" content="Steve Yongwo, développeur php, alternant lyon, développeur symfony2, yongwo, développeur, alternant sciences-u lyon, lyon, sciences-u, concepteur ">
+    <meta name="description" content="Développeur web PHP à la recherche d'une alternance de 12 mois pour vallider mon master 2">
+    <meta name="author" content="Steve Yongwo">
     <link rel="shortcut icon" href="assets/ico/favicon.png">
 
     <title>Steve Yongwo | Web Developer </title>
